@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.voyosk"
        name="Voyo SK TV Archiv"
-       version="1.0"
+       version="1.1"
        provider-name="mx3L">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
